# webmux

./: .eslintrc.json  .gitignore  CLAUDE.md  DEV_BRANCH_INFO.md  FEATURE_REQUEST.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RUST_BACKEND_OPTIMIZATIONS.md  audio-handler.ts  backend-types.ts  env.d.ts  generate-icons.js  generate-pwa-icons.html  github-issue.md  index.html  package-lock.json  package.json  server-improved.js.backup  server.js  server.ts  test-audio-backend.sh  test-audio-streaming.sh  test-audio.html  test-audio.sh  test-backend.sh  test-capture.webm  test-monitor.webm  test-tone.webm  test-ws-audio.py  test_audio.webm  tmux-handler.js  tmux-handler.ts  tmux-web-terminal-best-practices.md  tsconfig.app.json  tsconfig.backend.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
backend-rust/: Cargo.toml
backend-rust/benches/: performance.rs
backend-rust/src/: audio_optimized.rs.bak  broadcast.rs.bak  error.rs  lib.rs.bak  main.rs  terminal_buffer.rs  terminal_delta.rs  tmux_control.rs  websocket_optimized.rs.bak
backend-rust/src/audio/: mod.rs
backend-rust/src/buffer/: mod.rs
backend-rust/src/cron/: mod.rs
backend-rust/src/dotfiles/: mod.rs
backend-rust/src/dotfiles/templates/: bashrc.template  gitconfig.template  tmux.conf.template  vimrc.template
backend-rust/src/handlers/: mod.rs  mod.rs.old
backend-rust/src/monitor/: mod.rs
backend-rust/src/tmux/: mod.rs
backend-rust/src/types/: mod.rs
backend-rust/src/websocket/: mod.rs  mod_old.rs  optimized.rs  optimized_session_manager.rs  session_manager.rs
src/: App.vue  (+5 more)
(+91 files in other folders)
